# NextGenerationInstagram

./: .env.example  .gitignore  Dockerfile  README.md  env  main.py  pyproject.toml  requirements.txt  schemas.py
alembic/: env.py
alembic/versions/: 04b8bec28293_migration.py  381a3b32a45f_initial.py
configure/: config.py
database/: db.py  models.py
routes/: cloudinary.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: comments.py  rating.py  users.py
src/routes/: auth.py  cloudinary.py  comments.py  images.py  qr.py  rating.py  search_filtering.py  users.py
src/services/: auth.py  auth_decorators.py  roles.py
