[tool.poetry]
name = "nextgenerationinstagram"
version = "0.3.1"
description = "nextgenerationinstagram"
authors = ["Dmytro Oseledko <d.oseledko@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.97.0"}
uvicorn = {extras = ["standart"], version = "^0.22.0"}
sqlalchemy = "^2.0.16"
alembic = "^1.11.1"
psycopg2 = "^2.9.6"
jinja2 = "^3.1.2"
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
fastapi-limiter = "^0.1.5"
cloudinary = "^1.33.0"
postgres = "^4.0"
pydantic = "^1.10.9"
email-validator = "^2.0.0.post2"
pycryptodome = "^3.18.0"
qrcode = "^7.4.2"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
